# P2P

./: README.md  launch_vllm_emb.sh  pyproject.toml
configs/: hyper_lora_p13n_unified.yaml
data_p13n/: create_hf_datasets.py  create_hf_datasets.sh  gen_profile.sh  gen_user_embeddings.sh  generate_user_embeddings.py  generate_user_profiles.py  get_profile_prompt.md  random_sample_datasets.py  start_vllm.sh  unified_sample_datasets.py  user_emb_sample_datasets.py
data_p13n/prompts/: abstract_generation_profile_prompt.md  citation_profile_prompt.md  default_profile_prompt.md  movie_profile_prompt.md  news_cat_profile_prompt.md  news_headline_profile_prompt.md  prism_profile_prompt.md  product_profile_prompt.md  product_review_profile_prompt.md  scholarly_profile_prompt.md  topic_writing_profile_prompt.md  tweet_profile_prompt.md  unified_profile_prompt.md
llm-judge/: eval_aloe_pointwise.sh  eval_base_all.sh  eval_hyperlora_all.sh  eval_model.py  llm_eval_prompt.md  llm_eval_prompt_pairwise-cache.md  llm_eval_prompt_pairwise.md  llm_eval_prompt_woref.md  score_rubric.md
scripts/: eval_PAG_models.sh  eval_PAG_models_3b.sh  eval_RAG_models.sh  eval_RAG_models_3b.sh  eval_all_history_models.sh  eval_base_models_3b.sh  eval_base_models_qwen.sh  eval_hypermod.sh  eval_hypermod_checkpoint.py  eval_mt_lora.sh  eval_mt_lora_checkpoint.py  run_eval.py  train_custom_sft.py  train_mt_lora_qwen_3b_baselines.sh  train_mt_lora_qwen_baselines.sh  train_oppu_baselines.sh  train_oppu_baselines_qwen_3b.sh  uv_train_p2p_qwen_3b_unified.sh  uv_train_p2p_qwen_unified.sh
(+180 files in other folders)
